--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "gulp": "3.8.8",
     "gulp-util": "3.0.7",
     "inquirer": "0.11.2",
-    "ionic-app-lib": "2.1.9",
+    "ionic-app-lib": "bdirito/ionic-app-lib#https",
     "moment": "2.11.1",
     "open": "0.0.5",
     "optimist": "0.6.0",
